2010-05-06  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Completion/CSharpTextEditorCompletion.cs:
	  fixed 'Bug 603344 - Matching in completion list'.

2010-05-06  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Refactoring/FindMemberAstVisitor.cs:
	  fixed find member references for local variables.

2010-05-06  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Resolver/NRefactoryResolver.cs: Fixed
	  local variable off by 1 error.

2010-05-04  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile.am:
	* CSharpBinding.csproj:
	* CSharpBinding.addin.xml:
	* templates/GladeSharp2Project.xpt.xml:
	* templates/GnomeSharp2Project.xpt.xml:
	* templates/GtkSharp2ProjectMac.xpt.xml: Remove deprecated
	  Gnome# and Glade# project types, and add a Mac-specific GTK
	  template that doesn't use Stetic.

2010-05-04  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Completion/MemberCompletionData.cs: Fixed
	  'Bug 596609 - Parameters tooltips not escaping generics in
	  markup'.

2010-05-03  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Resolver/NewCSharpExpressionFinder.cs:
	  Dispose the lexer after use.

2010-05-03  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoCSharpPolicy.xml: Added attribute to explicitly allow
	  differential serialization for a policy (which is disabled
	  by default).

2010-05-03  Mike Krüger  <mkrueger@novell.com>

	* CSharpBinding.addin.xml: Set mac shortcut.

2010-05-03  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* CSharpBinding.csproj:
	* CSharpBinding.addin.xml:
	* MonoDevelop.CSharp.Highlighting/MoveToUsagesHandler.cs:
	* MonoDevelop.CSharp.Highlighting/HighlightUsagesExtension.cs:
	  Fixed 'Bug 601436 - Command to cycle through highlighted
	  references'.

2010-05-03  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Resolver/ResolveVisitor.cs: Fixed 'Bug
	  601350 - Null ref in highlighting/tooltips'.

2010-04-30  Mike Krüger  <mkrueger@novell.com>
