@@ -48,9 +48,11 @@ namespace MonoDevelop.CSharp.Completion
 		
 		public EventCreationCompletionData (TextEditorData editor, string varName, IType delegateType, IEvent evt, string parameterList, IMember callingMember, IType declaringType) : base (null)
 		{
-			if (string.IsNullOrEmpty (varName))
-				varName = "handle";
-			this.DisplayText   = "Handle" + Char.ToUpper (varName[0]) + varName.Substring (1) + evt.Name;
+			if (string.IsNullOrEmpty (varName)) {
+				this.DisplayText   = "Handle" + evt.Name;
+			} else {
+				this.DisplayText   = "Handle" + Char.ToUpper (varName[0]) + varName.Substring (1) + evt.Name;
+			}
 			
 			if (declaringType.SearchMember (this.DisplayText, true).Count > 0) {
 				for (int i = 1; i < 10000; i++) {
