@@ -1,6 +1,12 @@
 2010-05-06  Mike Krüger  <mkrueger@novell.com>
 
 	* MonoDevelop.CSharp.Completion/CSharpTextEditorCompletion.cs:
+	* MonoDevelop.CSharp.Completion/EventCreationCompletionData.cs:
+	  Fixed 'Bug 603282 - Autogenerated method name is invalid'.
+
+2010-05-06  Mike Krüger  <mkrueger@novell.com>
+
+	* MonoDevelop.CSharp.Completion/CSharpTextEditorCompletion.cs:
 	  fixed 'Bug 603344 - Matching in completion list'.
 
 2010-05-06  Mike Krüger  <mkrueger@novell.com>
